Changes
=======

0.1.0 (2018-?)
------------------
- upload release to PyPI
- simplify file structure
- Python 3 compatible, test with tox (#23)
- set default timeout 2hrs (#27, #26)
- require html5lib (#29)
- fix test (#21)

0.0.5 (2016-10-18)
------------------
- remove selenium and phantomjs dependencies
- geomark support removed
- CRS support removed

0.0.4 (2016-07-08)
------------------
- headless downloads! (#1)
- cli testing now functional (#3)

0.0.3 (2016-07-08)
------------------
- use a better key to find download link on catalog page (#15)

0.0.2 (2016-07-06)
------------------
- close issues related to layers / projections / appending (#2, #9, #10)
- cleanup
- fix problems with CLI

0.0.1 (2016-07-03)
------------------
Automation of simple downloads from British Columbia's Data Distribution Service.