@@ -1,4 +1,4 @@
-from .main import download
+from .main import download, info
 from .formats import formats
 
 __version__ = "0.1.0"
