@@ -1,4 +1,5 @@
 from __future__ import absolute_import
+import json
 import os
 import shutil
 
@@ -36,17 +37,22 @@ def validate_format(ctx, param, value):
               help="Output file format. Default: FileGDB",
               callback=validate_format)
 @click.option('--output', '-o', help="Output folder/gdb")
-def cli(dataset, email, driver, output):
-    """Download a dataset from BC Data Distribution Service"""
-    # download to temp
-    dl_path = bcdata.download(dataset,
-                              email,
-                              driver=driver)
-    if not dl_path:
-        click.abort("No data downloaded, check email to view issue")
-    # if output not given, write to current directory using default folder name
-    if not output:
-        output = os.path.join(os.getcwd(), os.path.split(dl_path)[1])
-    # copy data to specified path
-    shutil.copytree(dl_path, output)
-    click.echo(dataset + " downloaded to " + output)
+@click.option('--info', '-i', is_flag=True, help="Display info about dataset")
+def cli(dataset, email, driver, output, info):
+    """Download a dataset from BC Data Distribution Service
+    """
+    if info:
+        click.echo(json.dumps(bcdata.info(dataset)))
+    else:
+        # download to temp
+        dl_path = bcdata.download(dataset,
+                                  email,
+                                  driver=driver)
+        if not dl_path:
+            click.abort("No data downloaded, check email to view issue")
+        # if output not given, write to current directory using default folder name
+        if not output:
+            output = os.path.join(os.getcwd(), os.path.split(dl_path)[1])
+        # copy data to specified path
+        shutil.copytree(dl_path, output)
+        click.echo(dataset + " downloaded to " + output)
