@@ -5,9 +5,10 @@ Changes
 ------------------
 - upload release to PyPI
 - simplify file structure
-- Python 3 compatible, test with tox (#23)
-- set default timeout 2hrs (#27, #26)
+- add info function/option (#30)
 - require html5lib (#29)
+- set default timeout 2hrs (#27, #26)
+- Python 3 compatible, test with tox (#23)
 - fix test (#21)
 
 0.0.5 (2016-10-18)
